--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
     <!-- Firebase SDK -->
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-        import { getFirestore, collection, addDoc, query, where, onSnapshot, doc, deleteDoc, updateDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+        import { getFirestore, collection, addDoc, query, where, onSnapshot, doc, deleteDoc, updateDoc, orderBy } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
         // 請在這裡貼上您的 Firebase 專案設定程式碼
         const firebaseConfig = {
@@ -365,7 +365,6 @@
   appId: "1:304652442672:web:fb833a5084edf8087161f5",
   measurementId: "G-VP4M1FBR0G"
 };
-
 
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
@@ -407,8 +406,8 @@
                 return `<span class="${colorClass}">${sign} ${Math.abs(percentage).toFixed(2)}%</span>`;
             };
 
-            // 查詢當月資料
-            const qCurrent = query(recordsCol, where("month", "==", currentMonthStr));
+            // 查詢當月資料並依據 timestamp 降序排列 (最新到最舊)
+            const qCurrent = query(recordsCol, where("month", "==", currentMonthStr), orderBy("timestamp", "desc"));
             onSnapshot(qCurrent, (currentSnapshot) => {
                 let totalAmount = 0;
                 let maleCount = 0;
