--- a/index.html
+++ b/index.html
@@ -375,9 +375,16 @@
         let currentDate = new Date();
         let displayMonth = new Date(currentDate.getFullYear(), currentDate.getMonth(), 1);
 
-        const formatDate = (date) => `${date.getFullYear()}-${(date.getMonth() + 1).toString().padStart(2, '0')}-${date.getDate().toString().padStart(2, '0')}`;
-        // 修正後的 formatMonth 函式，確保月份格式有補零
-        const formatMonth = (date) => `${date.getFullYear()}-${(date.getMonth() + 1).toString().padStart(2, '0')}`;
+        // 新的 formatDate 函式，用於處理 YYYY-M-D 和 YYYY-M 的格式
+        const formatDate = (date, includeDay = true) => {
+            const year = date.getFullYear();
+            const month = date.getMonth() + 1; // getMonth() returns 0-11
+            const day = date.getDate();
+            if (includeDay) {
+                return `${year}-${month}-${day}`;
+            }
+            return `${year}-${month}`;
+        };
 
         // 彈窗相關變數
         const editModal = document.getElementById('editModal');
@@ -385,7 +392,8 @@
         let currentDocId = null;
 
         const updateStats = (month) => {
-            const currentMonthStr = formatMonth(month);
+            // 修正為不補零的月份格式
+            const currentMonthStr = formatDate(month, false);
             document.getElementById('current-month-display').innerText = currentMonthStr;
 
             const nextBtn = document.getElementById('next-month-btn');
@@ -476,7 +484,7 @@
 
                 // 查詢上個月的資料以進行比較
                 const prevMonth = new Date(month.getFullYear(), month.getMonth() - 1, 1);
-                const prevMonthStr = formatMonth(prevMonth);
+                const prevMonthStr = formatDate(prevMonth, false);
                 const qPrev = query(recordsCol, where("month", "==", prevMonthStr));
                 onSnapshot(qPrev, (prevSnapshot) => {
                     let prevTotalAmount = 0;
@@ -542,7 +550,7 @@
                 return;
             }
 
-            const newRecordMonth = formatMonth(new Date(newDate));
+            const newRecordMonth = formatDate(new Date(newDate), false);
             await updateDoc(doc(db, "records", currentDocId), {
                 amount: parseInt(newAmount),
                 date: newDate,
@@ -639,7 +647,7 @@
 
             try {
                 const selectedDate = new Date(date);
-                const recordMonth = formatMonth(selectedDate);
+                const recordMonth = formatDate(selectedDate, false);
 
                 await addDoc(recordsCol, {
                     amount: parseInt(amount),
