--- a/index.html
+++ b/index.html
@@ -375,11 +375,11 @@
         let currentDate = new Date();
         let displayMonth = new Date(currentDate.getFullYear(), currentDate.getMonth(), 1);
 
-        // 新的 formatDate 函式，用於處理 YYYY-M-D 和 YYYY-M 的格式
+        // 新的 formatDate 函式，用於處理 YYYY-MM-DD 和 YYYY-MM 的格式，確保月份和日期都有兩位數
         const formatDate = (date, includeDay = true) => {
             const year = date.getFullYear();
-            const month = date.getMonth() + 1; // getMonth() returns 0-11
-            const day = date.getDate();
+            const month = (date.getMonth() + 1).toString().padStart(2, '0');
+            const day = date.getDate().toString().padStart(2, '0');
             if (includeDay) {
                 return `${year}-${month}-${day}`;
             }
@@ -418,8 +418,8 @@
             // 偵錯訊息：在發送查詢前，先印出要查詢的月份字串
             console.log(`正在查詢的月份: ${currentMonthStr}`);
 
-            // 查詢當月資料並依據 timestamp 降序排列 (最新到最舊)
-            const qCurrent = query(recordsCol, where("month", "==", currentMonthStr), orderBy("timestamp", "desc"));
+            // 查詢當月資料並依據 date 降序排列 (最新到最舊)
+            const qCurrent = query(recordsCol, where("month", "==", currentMonthStr), orderBy("date", "desc"));
             onSnapshot(qCurrent, (currentSnapshot) => {
                 let totalAmount = 0;
                 let maleCount = 0;
@@ -558,7 +558,7 @@
             
             await updateDoc(doc(db, "records", currentDocId), {
                 amount: parseInt(newAmount),
-                date: newDate,
+                date: newDate, // 這裡儲存的日期會是 YYYY-MM-DD 格式
                 gender: newGender,
                 customerType: newCustomerType,
                 notes: newNotes,
@@ -660,7 +660,7 @@
                     customerType: selectedCustomerType,
                     notes: notes,
                     timestamp: new Date(),
-                    date: date,
+                    date: date, // 這裡儲存的日期會是 YYYY-MM-DD 格式
                     month: recordMonth
                 });
                 
